--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,10 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - meditions_images/
+    - medition_audio/
+
 
   # To add assets to your application, add an assets section, like this:
   # assets:
